<resources>
    <string name="app_name">WeatherAppBySSM</string>
    <string name="last_update">Last update:</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="weather_forecast_for_the_next_few_days">Weather forecast for the next few days:</string>
    <string name="change_city"><u>Change city</u></string>
    <string name="choose_city">Choose city</string>
    <string name="update_data">update data</string>
    <string name="details">details</string>
    <string name="exception">Something went wrong</string>
    <string name="try_again">try again</string>
    <string name="location_permission_denied">Give location permissions for displaying weather for your location</string>
    <string name="gps_disabled">Please enable GPS for display weather for your location</string>

    <string-array name="addedCities">
        <item name="city">Tokyo</item>
        <item name="city">Moscow</item>
        <item name="city">San Francisco</item>
        <item name="city">Vladivostok</item>
        <item name="city">Durban</item>
    </string-array>

</resources>