<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/locationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/cityCoordinatesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/weatherImageView"
                android:layout_width="90dp"
                android:layout_height="90dp" />

            <TextView
                android:id="@+id/weatherStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currentTemperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="90sp" />

            <TextView
                android:id="@+id/tempFeelsLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/lastWeatherUpdateAtTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/showHideWeatherDetailsButtonsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/showWeatherDetailsButton"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@color/grey"
                    android:shadowColor="@color/black"
                    android:shadowDx="-2"
                    android:shadowDy="2"
                    android:shadowRadius="0.01"
                    android:text="@string/show_details"
                    android:textAllCaps="true"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/hideWeatherDetailsButton"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:background="@color/grey"
                    android:shadowColor="@color/black"
                    android:shadowDx="-2"
                    android:shadowDy="2"
                    android:shadowRadius="0.01"
                    android:text="@string/hide_details"
                    android:textAllCaps="true"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lightGrey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/wind_icon"
                            app:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/windTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lightGrey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure_icon"
                            app:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/pressureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lightGrey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity_icon"
                            app:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/humidityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightGrey"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/minTempTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/maxTempTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightGrey"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/sunriseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/sunsetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/weatherForecastContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_forecast_for_the_next_few_days"
                    android:visibility="invisible" />

                <ListView
                    android:id="@+id/weatherForecastListView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/changeCityButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:shadowColor="@color/black"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="0.01"
            android:text="@string/change_city"
            android:textAllCaps="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loaderProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>